--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
-<p>Click to navigate.</p>
+<p i18n>Click to navigate.</p>
 <nav>
-  <p><a routerLink="/one">One</a></p>
-  <p><a routerLink="/two">Two</a></p>
-  <p><a routerLink="/two/three">Three</a></p>
+  <p i18n><a routerLink="/one">One</a></p>
+  <p i18n><a routerLink="/two">Two</a></p>
+  <p i18n><a routerLink="/two/three">Three</a></p>
 </nav>
 
 <router-outlet></router-outlet>
