fixed links etc

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
+<div class="language-selection">
+  <a target="_parent" href="https://test-ng-deeplinks.web.app/fr" i18n
+    >French</a
+  >
+  <a target="_parent" href="https://test-ng-deeplinks.web.app/en" i18n
+    >English</a
+  >
+</div>
 <p i18n>Click to navigate.</p>
 <nav>
   <p i18n><a routerLink="/one">One</a></p>
